@@ -98,6 +98,8 @@ AST_ARG_REGEXP(REGEXP)
 AST_ARG_BACKQUOTE_EXEC(ALLOW_BACKQUOTE_EXEC)
 AST_PTHREADS()
 
+LIBCURL_CHECK_CONFIG([yes], [7.9.0], [], [])
+
 AST_FLAGS()
 AC_SUBST(CC)
 AC_SUBST(CFLAGS)
